--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "w3ocom/fieldspack-legacy",
     "description": "FieldsPack class to extend php pack/unpack functions",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "Alexander Jer",
@@ -12,9 +13,10 @@
             "w3ocom\\FieldsPack\\": "src/"
         }
     },
+    "require": {
+        "php": ">=5.5"
+    },
     "require-dev": {
-        "phpstan/phpstan": "1.8.2",
-        "vitexsoftware/phpunit-skeleton-generator": "*",
-        "phpunit/phpunit": "9.5.x-dev"
+        "phpunit/phpunit": "<=5.7.27"
     }
 }
